<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_oferta"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        tools:ignore="MissingPrefix">

        <ImageView
            android:id="@+id/ofertaImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:alpha="1.0"
            android:scaleType="centerCrop"
            android:tint="#88212121"/>

        <TextView
            android:id="@+id/ofertaTitle"
            fontPath="fonts/Raleway-Bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#ffffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ofertaPoints"
            fontPath="fonts/Raleway-Bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rewardTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:textColor="#ffffffff" />

        <TextView
            android:id="@+id/ofertaEndDate"
            fontPath="fonts/Raleway-Bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#ffffffff"/>

        <ImageButton
            android:id="@+id/ofertaFavoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="21dp"
            android:alpha="1.0"
            android:background="@android:color/transparent"
            android:tint="#FFFFFF"
            card_view:srcCompat="@drawable/ic_fav_void"/>


    </RelativeLayout>

</android.support.v7.widget.CardView>