<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        tools:ignore="MissingPrefix">

        <ImageView
            android:id="@+id/rewardBackgroundImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:alpha="1.0"
            android:scaleType="centerCrop"
            android:tint="#88212121" />

        <TextView
            android:id="@+id/rewardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            fontPath="fonts/Raleway-Bold.ttf"
            android:textColor="#ffffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rewardPoints"
            fontPath="fonts/Raleway-Bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rewardTitle"
            android:layout_marginLeft="20dp"
            android:textColor="#ffffffff" />

        <TextView
            android:id="@+id/rewardCategory"
            fontPath="fonts/Raleway-Bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rewardPoints"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#ffffffff"
            android:visibility="visible" />

        <TextView
            android:id="@+id/rewardEndDate"
            fontPath="fonts/Raleway-Bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#ffffffff" />

        <ImageButton
            android:id="@+id/exchangeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/favoriteButton"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:alpha="1.0"
            android:background="@android:color/transparent"
            android:tint="#FFFFFF"
            card_view:srcCompat="@drawable/ic_cart" />

        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="21dp"
            android:layout_toStartOf="@+id/exchangeButton"
            android:alpha="1.0"
            android:background="@android:color/transparent"
            android:tint="#FFFFFF"
            card_view:srcCompat="@drawable/ic_fav_void" />

    </RelativeLayout>

</android.support.v7.widget.CardView>